--- a/index.html
+++ b/index.html
@@ -42,8 +42,15 @@
                         <li>
                             <a
                             target="_blank" 
-                            href="https://www.twitch.tv/directory/game/FIFA%2022">
-                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/1869092879_IGDB-188x250.jpg" alt="Imagem FIFA">
+                            href="https://www.twitch.tv/directory/game/Tom%20Clancy's%20Rainbow%20Six%20Siege">
+                            <img src="https://i.pinimg.com/originals/b4/d7/10/b4d710c6bc6c9009e8b88d9e2326ddec.jpg" alt="Imagem Rainbow Six">
+                            </a>
+                        </li>
+                        <li>
+                            <a
+                            target="_blank" 
+                            href="https://www.twitch.tv/directory/game/Need%20for%20Speed%20Heat">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/512782_IGDB-144x192.jpg" alt=" Imagem NFS Heat">
                             </a>
                         </li>
                     </ul>
